[project]
name = "bondbot"
version = "0.1.0"
description = "Telegram bot for scraping and posting new bond launches"
requires-python = ">=3.9"
dependencies = [
    "aiogram",
    "python-dotenv",
    "solders",
    "solana",
    "tenacity",
    "pymongo",
]

[project.optional-dependencies]
dev = [
    # Linting
    "ruff",
    "codespell",
    "isort",
    "black",
    # Static
    "pyright",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info", "lib/*"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

# LSPs and formatters
[tool.pyright]
include = ["src"]

[tool.black]
line-length = 99
target-version = ["py312"]

# Ensures that isort will format code that aligns with black. Used to configure
# potential editors that will have isort installed, for automatically re-ordering
# imports on save.
[tool.isort]
profile = "black"
line_length = 99
